- 138 new cookies added.

03/12/2001 (Jir)
- hibernation/annoucement/auto-off for AFK-mode.
- 't' won't disturb players' running (but still cannot start running).

05/12/2001 (Jir)
- Coloured cookie.
- Allow URL on chat (eg. http://www.pernmangband.net/)
- Admin command /wish
- Client tries to use META_ADDRESS_2 in case.

06/12/2001 (Jir)
- Ego monsters. [version no. is 3.2.2 now]

07/12/2001 (Jir)
- Trap Detection won't reveal all the traps.
- Bugfixes for ego monsters.
- Total of 22+2 ego-monster types.

08/12/2001 (Jir)
- More megos and bugfixes.
- wizard/DM should use console password from now on.
- SPELL_INTERFERE option in *.cfg.
- Failing to cast a spell takes a turn now.
- wizard/DM can view all the players' inventory via "'".
- Repeated messages are shown in more decent way.(client)

09/12/2001 (Jir)
- Bugfixes. Megos.
- rewritten chat-line commands' code using that of Tanix(thx).

09/12/2001 (written by Tanix/modified by Jir)
- chat-line command /cast.

10/12/2001 (evileye)
- 3d base code committed.
- Multiple towns possible.
- Multiple dungeons / Add dungeon in dm level menu.

11/12/2001 (evileye)
- Anti spamming code added

11/12/2001 (Jir)
- Vertical recall supported.

12/12/2001 (Jir)
- Horizontal recall ({@RW17,22}) supported?
- 'Cannot run' / 'Delayed run' bug fixed.
- World-coodination display for '@' screen.
- Player-location is shown on 'M'(Map) screen. (wilderness map is disabled)
- Ghost never bleeds.

13/12/2001 (Jir)
- NEWBIES_CANNOT_DROP specifies the minimum level for item/au dropping.
- ANTI_ARTS_HORDE configure option added.

13/12/2001 (Evileye)
- Fixed bugs in teleport_player_level
- Added town generation for Dungeon Master (limited)
- Monster generation in town/near town houses suppressed.
- Made unstatic_level function (was duplicated)
- Fixed bug in unstatic_level (space/time anchor wasnt killed for all)
- Fixed bug where new towns would not have objects/monsters attached