@@ -419,6 +419,7 @@ Change list for PernMangband
 13/12/2001 (Jir)
 - NEWBIES_CANNOT_DROP specifies the minimum level for item/au dropping.
 - ANTI_ARTS_HORDE configure option added.
+- all the admin-level slash-commands are available again now.
 
 13/12/2001 (Evileye)
 - Fixed bugs in teleport_player_level
